k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trames
  labels:
    pod-security.kubernetes.i/enforce: restricted
    pod-security.kubernetes.i/audit: restricted
    pod-security.kubernetes.i/warn: restricted
